fixed weird 1px white space at top of sidebar fixed create_directory_spec.rb

--- a/app/assets/stylesheets/pages/repo.scss
+++ b/app/assets/stylesheets/pages/repo.scss
@@ -775,6 +775,9 @@
   }
 
   &.active {
+    // extend width over border of sidebar section
+    width: calc(100% + 1px);
+    padding-right: $gl-padding + 1px;
     background-color: $white-light;
     border-top-color: $white-dark;
     border-bottom-color: $white-dark;
